# AoC2023

./: .gitignore
benchmark/: Cargo.toml
benchmark/benches/: benchmark.rs
day01a/: Cargo.toml
day01a/src/: main.rs
day01b/: Cargo.toml
day01b/src/: main.rs
day02a/: Cargo.toml
day02a/src/: main.rs
day02b/: Cargo.toml
day02b/src/: main.rs
day03a/: Cargo.toml
day03a/src/: main.rs
day03b/: Cargo.toml
day03b/src/: main.rs
day04a/: Cargo.toml
day04a/src/: main.rs
day04b/: Cargo.toml
day04b/src/: main.rs
day05a/: Cargo.toml
day05a/src/: main.rs
day05b/: Cargo.toml
day05b/src/: main.rs
day06a/: Cargo.toml
day06a/src/: main.rs
day06b/: Cargo.toml
day06b/src/: main.rs
day07a/: Cargo.toml
day07a/src/: main.rs
day07b/: Cargo.toml
day07b/src/: main.rs
day08a/: Cargo.toml
day08a/src/: main.rs
day08b/: Cargo.toml
day08b/src/: main.rs
day09a/: Cargo.toml
day09a/src/: main.rs
day09b/: Cargo.toml
day09b/src/: main.rs
