[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[dependencies]
day01a = {path = "../day01a"}
day01b = {path = "../day01b"}
day02a = {path = "../day02a"}
day02b = {path = "../day02b"}